minesweeper/src/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');

* {
  box-sizing: border-box;
}

html {
  --text-color: rgba(60, 60, 67);
  --bg-color: #ffffff;
  --border-control-color: #999999 #e3e3e3 #fbfbfb #999999;
  --board-bg-primary-color: #c6c6c6;
  --board-bg-secondary-color: #b3b3b3;
  --border-tile-color: #e3e3e3 #999999 #999999 #fbfbfb;
  --special: blue;
}

html[data-theme='dark'] {
  --text-color: rgba(255, 255, 245, 0.86);
  --bg-color: #2c2c2f;
  --border-control-color: #000000 #353535 #2a2a2a #000000;
  --board-bg-primary-color: #161618;
  --board-bg-secondary-color: #0f0f0f;
  --border-tile-color: #353535 #000000 #000000 #2a2a2a;
  --special: #646cff;
}

.body {
  font-family: 'Roboto', monospace;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 100vh;
  font-size: 2rem;
  background-color: var(--bg-color);
}

.controls {
  display: flex;
  flex-direction: column;
  gap: 15px;
  font-size: 1rem;
  margin: 20px 0;
}

.controls__settings {
  display: flex;
  gap: 15px;
}

.controls__stat {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 5px;
  text-align: center;
}

.controls__select,
.controls__score-button {
  color: var(--text-color);
  border: 2px solid var(--special);
  padding: 2px;
  outline: none;
  background-color: inherit;
}

.controls__button {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin-left: auto;
  background-color: inherit;
  border: none;
  cursor: pointer;
  fill: var(--special);
}

.controls__score-button {
  width: 40%;
  align-self: center;
  padding: 5px;
  cursor: pointer;
  transition: all 0.2s;
}

.steps,
.flags-mines,
.timer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
}

.steps__title,
.flags-mines__title,
.timer__title {
  color: var(--text-color);
}

.steps__content,
.flags-mines__content,
.timer__content {
  color: var(--special);
  font-size: 1.4rem;
  font-weight: 600;
  font-variant-numeric: tabular-nums;
}

.flags-mines__content {
  display: flex;
  gap: 1.4em;
}

.minesweeper {
  display: flex;
  flex-direction: column;
}

.header,
.board {
  background-color: var(--board-bg-primary-color);
}

.header {
  display: flex;
  justify-content: center;
  padding: 20px 20px 10px 20px;
  user-select: none;
}

.board {
  padding: 10px 20px 20px 20px;
}

.new-game {
  position: relative;
  font-size: 2rem;
  font-weight: 500;
  color: var(--special);
  text-align: center;
  background-color: inherit;
  border-radius: 6px;
  padding: 3px;
  border: none;
  outline: none;
  display: block;
  z-index: 2;
  overflow: hidden;
  cursor: pointer;
}

.new-game::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 200%;
  height: 100%;
  background: linear-gradient(
    115deg,
    #4fcf70,
    #fad648,
    #a767e5,
    #12bcfe,
    #44ce7b
  );
  background-size: 50% 100%;
}

.new-game:hover:before {
  animation: rainbowSlide 0.75s linear infinite;
}

@keyframes rainbowSlide {
  to {
    transform: translateX(-50%);
  }
}

.new-game__title {
  position: relative;
  z-index: 2;
  padding: 10px;
  border-radius: 3px;
  display: block;
  height: 100%;
  background: var(--board-bg-secondary-color);
}

.board {
  display: grid;
  grid-template-columns: repeat(var(--size), 40px);
  grid-template-rows: repeat(var(--size), 40px);
  justify-content: center;
  gap: 1px;
}

.board .tile {
  width: 100%;
  height: 100%;
  font-weight: 500;
  display: flex;
  justify-content: center;
  align-items: center;
  user-select: none;
}

.tile[data-status='hidden'],
.tile[data-status='marked'] {
  border: 4px solid;
  border-color: var(--border-tile-color);
}

.tile[data-status='hidden'] {
  cursor: pointer;
}

.tile[data-status='number'],
.tile[data-status='mine'] {
  background-color: var(--board-bg-secondary-color);
}

.tile.tile__lose {
  background-color: red;
}

.tile__one {
  color: blue;
}

.tile__two {
  color: green;
}

.tile__three {
  color: red;
}

.tile__four {
  color: darkblue;
}

.tile__five {
  color: brown;
}

.tile__six {
  color: turquoise;
}

.tile__seven {
  color: black;
}

.tile__eight {
  color: white;
}

.modal {
  font-size: 32px;
  outline: none;
  pointer-events: none;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.modal[open] {
  pointer-events: inherit;
  animation: fadeIn 0.1s ease normal;
}

.modal::backdrop {
  animation: fadeIn 0.1s ease normal;
  backdrop-filter: blur(5px);
}

.modal__button {
  color: var(--special);
  font-size: 0.6em;
  outline: none;
  background-color: inherit;
  border: 2px solid var(--special);
  padding: 7px;
  cursor: pointer;
  transition: all 0.2s;
}

.modal__new-game-button {
  margin-left: auto;
  margin-right: 10px;
}

.modal__button:hover {
  color: white;
  background-color: var(--special);
}

.modal__title,
.results__title {
  text-align: center;
  margin: 20px 0;
}

.modal__title {
  font-size: 1em;
  color: var(--special);
}

.results__title {
  font-size: 0.9em;
}

.results__content {
  display: grid;
  gap: 5px 0;
}

.results__content-row {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  justify-items: center;
  align-items: center;
  gap: 10px 0;
}

.results__content-item {
  font-size: 0.7em;
}

.results__content-item_header {
  color: var(--special);
  font-size: 0.8em;
}

.results__content-item_empty {
  color: rgba(170, 170, 170, 0.3);
  font-size: 0.6em;
}

@media (max-width: 1150px) {
  .body {
    font-size: 1.5rem;
  }

  .controls {
    font-size: 0.8rem;
  }

  .new-game {
    font-size: 1.5rem;
  }

  .board {
    grid-template-columns: repeat(var(--size), 30px);
    grid-template-rows: repeat(var(--size), 30px);
  }

  .tile[data-status='hidden'],
  .tile[data-status='marked'] {
    border: 3px solid;
    border-color: var(--border-tile-color);
  }
}

@media (max-width: 900px) {
  .body {
    font-size: 1.2rem;
  }

  .new-game {
    font-size: 1.2rem;
  }

  .board {
    grid-template-columns: repeat(var(--size), 25px);
    grid-template-rows: repeat(var(--size), 25px);
  }
}

@media (max-width: 730px) {
  .body {
    font-size: 0.8rem;
  }

  .controls__settings {
    gap: 5px;
  }

  .controls__button svg {
    width: 20px;
    height: 20px;
  }

  .new-game {
    font-size: 0.8rem;
  }

  .steps__content,
  .flags-mines__content,
  .timer__content {
    font-size: 1rem;
  }

  .header {
    padding: 7px 7px 5px 7px;
  }

  .board {
    padding: 5px 7px 7px 7px;
    grid-template-columns: repeat(var(--size), 18px);
    grid-template-rows: repeat(var(--size), 18px);
  }

  .tile[data-status='hidden'],
  .tile[data-status='marked'] {
    border: 2px solid;
    border-color: var(--border-tile-color);
  }
}

